# cards

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: 180.h5
data/weights/ddfb/: ddfb_nch3_nla4_nfe64.pth
examples/gaussian_deconvolution/: config_180_pnp.json  config_180_tv.json  config_2048_pnp.json  config_2048_tv.json  config_2896_pnp.json  config_2896_tv.json  config_4096_pnp.json  config_4096_tv.json  main_gaussian_deconvolution.py  utils_gaussian_deconvolution.py
examples/gaussian_inpainting/: config_180_pnp.json  config_180_tv.json  config_2048_pnp.json  config_2048_tv.json  config_2896_pnp.json  config_2896_tv.json  config_4096_pnp.json  config_4096_tv.json  config_lille_pnp.json  main_gaussian_inpainting.py  utils_gaussian_inpainting.py
examples/poisson_deconvolution/: config_180_pnp.json  config_180_tv.json  config_2048_pnp.json  config_2048_tv.json  config_2896_pnp.json  config_2896_tv.json  config_4096_pnp.json  config_4096_tv.json  main_poisson_deconvolution.py  utils_poisson_deconvolution.py
scripts/: config_builder.py
src/mcmc/: backend.py  logger.py
src/mcmc/communicator/: base_cartesian_communicator.py  mpi_utils.py  sync_cartesian_communicator.py
src/mcmc/data_manager/: data_manager.py  warmstart_rng.py  warmstart_rng_mpi.py
src/mcmc/denoisers/: base_denoiser.py  denoiser_benchmark.py  denoiser_loader.py  denoiser_timing.py  denoiser_timing_mpi.py  mpi_ddfb.py  mpi_dncnn.py  mpi_drunet.py  (+3 more)
tests/: conftest.py  test_communicators.py  test_distributed_save_load.py  test_restart_gpu_rng.py  test_restart_rng.py  test_save_load.py  test_warmstart_rng.py  test_warmstart_rng_mpi.py
tests/operators/: test_dft_convolution.py  test_gradient.py  test_gradient_cpu.py  test_mpi_denoisers.py
(+67 files in other folders)
